added drop indicator

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="center">
-    <div class="box" data-drop-target>1</div>
-    <div class="box" data-drop-target>2</div>
-    <div class="box" data-drop-target>3</div>
+    <div class="box" data-drop-target=".center > .box">1</div>
+    <div class="box" data-drop-target=".center > .box">2</div>
+    <div class="box" data-drop-target=".center > .box">3</div>
   </div>
 </body>
 </html>
