--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,15 @@
     <div class="box" data-drop-target=".center > .box">2</div>
     <div class="box" data-drop-target=".center > .box">3</div>
   </div>
+  <div class="center">
+    <div class="box" data-drop-target=".center > .box">4</div>
+    <div class="box" data-drop-target=".center > .box">5</div>
+    <div class="box" data-drop-target=".center > .box">6</div>
+  </div>
+  <div class="center">
+    <div class="box" data-drop-target=".center > .box">7</div>
+    <div class="box" data-drop-target=".center > .box">8</div>
+    <div class="box" data-drop-target=".center > .box">9</div>
+  </div>
 </body>
 </html>
