bugfix: data-drop-target value is not used for detecting droppable zone

--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
   <div class="center">
-    <div class="box" data-drop-target=".center > .box">1</div>
-    <div class="box" data-drop-target=".center > .box">2</div>
-    <div class="box" data-drop-target=".center > .box">3</div>
+    <div class="box" data-drop-target=".center > .box1">1</div>
+    <div class="box" data-drop-target=".center > .box1">2</div>
+    <div class="box" data-drop-target=".center > .box1">3</div>
   </div>
   <div class="center">
-    <div class="box" data-drop-target=".center > .box">4</div>
-    <div class="box" data-drop-target=".center > .box">5</div>
-    <div class="box" data-drop-target=".center > .box">6</div>
+    <div class="box box1" data-drop-target=".center > .box">4</div>
+    <div class="box box1" data-drop-target=".center > .box">5</div>
+    <div class="box box1" data-drop-target=".center > .box">6</div>
   </div>
   <div class="center">
     <div class="box" data-drop-target=".center > .box">7</div>
