renamed dataTarget to swdTargets & added swdZones

--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
   <div class="center">
-    <div class="box" data-drop-target=".center > .box1">1</div>
-    <div class="box" data-drop-target=".center > .box1">2</div>
-    <div class="box" data-drop-target=".center > .box1">3</div>
+    <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">1</div>
+    <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">2</div>
+    <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">3</div>
   </div>
   <div class="center">
-    <div class="box box1" data-drop-target=".center > .box">4</div>
-    <div class="box box1" data-drop-target=".center > .box">5</div>
-    <div class="box box1" data-drop-target=".center > .box">6</div>
+    <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">4</div>
+    <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">5</div>
+    <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">6</div>
   </div>
   <div class="center">
-    <div class="box" data-drop-target=".center > .box">7</div>
-    <div class="box" data-drop-target=".center > .box">8</div>
-    <div class="box" data-drop-target=".center > .box">9</div>
+    <div class="box" data-swd-targets="box3" data-swd-zones="box3">7</div>
+    <div class="box" data-swd-targets="box3" data-swd-zones="box3">8</div>
+    <div class="box" data-swd-targets="box3" data-swd-zones="box3">9</div>
   </div>
 </body>
 </html>
