added data-swd-space attribute

--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="center">
-    <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">1</div>
-    <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">2</div>
-    <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">3</div>
-  </div>
-  <div class="center">
-    <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">4</div>
-    <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">5</div>
-    <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">6</div>
-  </div>
-  <div class="center">
-    <div class="box" data-swd-targets="box3" data-swd-zones="box3">7</div>
-    <div class="box" data-swd-targets="box3" data-swd-zones="box3">8</div>
-    <div class="box" data-swd-targets="box3" data-swd-zones="box3">9</div>
+  <div  data-swd-space>
+    <div class="center"> 
+      <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">1</div>
+      <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">2</div>
+      <div class="box" data-swd-targets="box1 box2 box3" data-swd-zones="box1">3</div>
+    </div>
+    <div class="center">
+      <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">4</div>
+      <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">5</div>
+      <div class="box" data-swd-targets="box2 box3" data-swd-zones="box2">6</div>
+    </div>
+    <div class="center">
+      <div class="box" data-swd-targets="box3" data-swd-zones="box3">7</div>
+      <div class="box" data-swd-targets="box3" data-swd-zones="box3">8</div>
+      <div class="box" data-swd-targets="box3" data-swd-zones="box3">9</div>
+    </div>
   </div>
 </body>
 </html>
