--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,22 @@
 <body>
   <div  data-swd-space>
     <div class="center"> 
-      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">1</div>
-      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">2</div>
-      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">3</div>
+      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">1 (v)</div>
+      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1" data-swd-mode="area">2 (a)</div>
+      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">3 (v)</div>
     </div>
     <div class="center">
-      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">4</div>
-      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">5</div>
-      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">6</div>
+      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">4 (v)</div>
+      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2" data-swd-mode="area">5 (a)</div>
+      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">6 (v)</div>
     </div>
     <div class="center">
-      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3">7</div>
-      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3">8</div>
-      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3">9</div>
+      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-position="horizontal">7 (h)</div>
+      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-mode="area">8 (a)</div>
+      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-position="horizontal">9 (h)</div>
     </div>
     <div class="center">
-      <div class="box-area" data-swd-zones="common">box area</div>
+      <div class="box-area" data-swd-zones="common" data-swd-mode="area">box area (a)</div>
     </div>
   </div>
 </body>
