completed logic based data-swd-area value

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,12 @@
       <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-position="horizontal">9 (h)</div>
     </div>
     <div class="center">
-      <div class="box-area" data-swd-zones="common" data-swd-mode="area">box area (a)</div>
+      <div class="box-area" 
+        data-swd-targets="common" 
+        data-swd-zones="common" 
+        data-swd-mode="area" 
+        data-swd-area="cover top bottom left right"
+      >box area (a)</div>
     </div>
   </div>
 </body>
