--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
       <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">6 (v)</div>
     </div>
     <div class="center">
-      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-position="horizontal">7 (h)</div>
+      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-position="horizontal" data-swd-offset="bottom:7">7 (h)</div>
       <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-mode="area">8 (a)</div>
-      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-position="horizontal">9 (h)</div>
+      <div class="box" data-swd-targets="box3 common" data-swd-zones="box3" data-swd-position="horizontal" data-swd-offset="bottom:7">9 (h)</div>
     </div>
     <div class="center">
       <div class="box-area" 
