--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="center">
       <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">4 (v)</div>
-      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2" data-swd-mode="area">5 (a)</div>
+      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2" data-swd-position="horizontal">5 (h)</div>
       <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">6 (v)</div>
     </div>
     <div class="center">
