made draggable & droppable zone work on nested element

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,14 @@
   <div  data-swd-space>
     <div class="center"> 
       <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">1 (v)</div>
-      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1" data-swd-mode="area">2 (a)</div>
+      <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1" data-swd-mode="area"> 
+        <div class="custom-box"> 
+          <div style="text-align: center;">
+            <!-- nested box -->
+            <div>2 (a)</div><sub>nested</sub> 
+          </div> 
+        </div>
+      </div>
       <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">3 (v)</div>
     </div>
     <div class="center">
