--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,17 @@
       <div class="box" data-swd-targets="box1 box2 box3 common" data-swd-zones="box1">3 (v)</div>
     </div>
     <div class="center">
-      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">4 (v)</div>
+      <!-- box with drag point -->
+      <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2" data-swd-target-drag-point="hello">
+        <div class="custom-box">
+          <div style="text-align: center;">
+            <div>4 (v)</div>
+            <div data-swd-drag-point="hello" class="chips">
+              <div>drag point</div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2" data-swd-position="horizontal">5 (h)</div>
       <div class="box" data-swd-targets="box2 box3 common" data-swd-zones="box2">6 (v)</div>
     </div>
